v0.9.45
  - Added an option to dump a fatMesh (including the ghost/shadow layers and neighborhood information)
  - Added a compile time option to set whether the tracer should be dumped with the mesh
  - Fixed a bug in the cosmological initial conditions in 2D that give wrong reolution to the mesh

v0.9.44
  - Added 'dice-config' for easy library configuration
  - Added an option to set a maximum level of refinement for simplices
  - Added the possibility to project simplices above a given refinement threshold to be projected using their vertices instead of exact projection

v0.9.43
  - vtrSlicer can now project density
  - Fixed small bugs and changed default time step to CFL_rho

v0.9.42
  - Greatly improved projection speed when a large number of threads are used

v0.9.41
  - Considerably increased refinement speed by reducing the number of simplices to consider on second and following passes.
  - Multithreaded mesh creation is now faster

v0.9.40
  - Desactivated updateIncidentSimplices as it seems to have a very rarely occuring bug	
  - Increased the precision of the computation of the expansion energy when doing cosmological simulations
  - Corrected loadImbalance computation for MPI and set noRepartWeight as default
  - Timings are now outputed in a 'timings/' sub-directory, one file for each MPI process.
  - Corrected units.H (removed the h0 factor) so that velocities are in gadget units (including h-1)

v0.9.39
  - Added a simplex generation that allow retieving the initial lagrangian domains and level of refinement for each simplex.
  - line and subsets type dumps are now working with MPI
  - Potential energy is now computed at order 0, which is enough and compatible with MPI ;)
  - Fixed a bug in sortedBlock memory pool iterators after elements were recycled
  - Added automatic detection of native architecture compilation flags